# Automatic-Darts-Scoring

./: .gitignore  CMakeSettings.json  README.md
Assets/: Logo.xcf
Client/: CMakeLists.txt  CMakePresets.json  Client.cpp
Client/Client/: CMakeLists.txt  Client.cpp  Client.h  ClientClass.h  DartMaths.h  ImGuiTheme.h  mt_client.cpp  mt_client.h  player.cpp  player.h
Server/: image_processing.py  interface.py  mt_server.py  server.py
